# BibCrit

./: .env.example  .gitignore  LICENSE  README.md  app.py  paper.bib  paper.md  pyproject.toml  render.yaml  requirements.txt  state.py
biblical_core/: claude_pipeline.py  corpus.py  divergence.py
blueprints/: critical.py  discovery.py  research.py  textual.py
data/: i18n.json
data/cache/: quality_votes.json
data/corpora/lxx_stepbible/: demo.csv  passages_12.csv
data/corpora/mt_etcbc/: demo.csv  passages_12.csv
data/prompts/: backtranslation_v1.txt  divergence_v1.txt  divergence_v2.txt  dss_v1.txt  genealogy_v1.txt  numerical_v1.txt  patristic_v1.txt  scribal_v1.txt  theological_v1.txt
docs/: api-reference.md  technical.md
docs/superpowers/plans/: 2026-03-31-remotion-video.md
docs/superpowers/specs/: 2026-03-30-bibcrit-design.md  2026-03-31-remotion-video-design.md
scripts/: export_cache.py  ingest_lxx.py  ingest_mt.py  precache_all.py  push_cache_to_supabase.py
static/: apparatus.js  backtranslation.js  bibcrit.css  dss.js  genealogy.js  numerical.js  patristic.js  result-actions.js  scribal.js  theological.js
static/js/: global.js
templates/: backtranslation.html  base.html  discovery.html  divergence.html  dss.html  genealogy.html  guide.html  guide_es.html  index.html  numerical.html  patristic.html  scribal.html  theological.html
tests/: test_claude_pipeline.py  test_corpus.py  test_divergence.py  test_integration.py
video/: package.json
video/src/: BibCritVideo.tsx  Root.tsx  theme.ts
video/src/components/: BrandSlug.tsx  (+3 more)
(+12 files in other folders)
