[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bibcrit"
version = "0.1.0"
description = "Biblical Textual Criticism research platform"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "anthropic>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "text-fabric>=9.0",
]
